--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,132 @@
+@import 'tailwindcss';
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: monospace;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+    color: #535bf2;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    margin: 0;
+    display: flex;
+    place-items: center;
+    min-width: 320px;
+    min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+input[type='text'],
+select {
+    border: 1px solid transparent;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    transition: all 0.25s;
+    -webkit-appearance: none;
+    appearance: none;
+    @apply outline-0 hover:border-white/70 focus:border-[#646cff] px-4 py-2.5;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+input[type='checkbox'] {
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    transition: all 0.25s;
+    -webkit-appearance: none;
+    appearance: none;
+    @apply p-3 rounded-full border border-white/0 hover:border-white/70 focus-visible:border-[#646cff] checked:bg-[#646cff];
+}
+
+ul li {
+    @apply flex items-center hover:bg-white/20 rounded p-2 duration-200 cursor-pointer;
+}
+
+button:not([color='ghost']) {
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    cursor: pointer;
+    @apply outline-0 ring-0 px-4 py-2.5 border bg-[#646cff] border-[#646cff] hover:bg-[#646cff]/80  hover:border-[#646cff]/80 duration-200 transition-all;
+}
+
+button[color='ghost'] {
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    cursor: pointer;
+    @apply outline-0 ring-0 hover:bg-white/10 duration-200 transition-all;
+}
+
+button[color='danger'] {
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    cursor: pointer;
+    @apply outline-0 ring-0 border-0 bg-red-500 hover:bg-red-500/80 duration-200 transition-all;
+}
+
+.dropdown-button {
+    @apply rounded-lg p-2 duration-200 hover:bg-white/20 cursor-pointer;
+}
+.dropdown-menu {
+    z-index: -99;
+    display: inline-block;
+    transform: scale(0.9);
+    transition: all 200ms ease-in-out, transform 200ms ease-in-out;
+    @apply absolute opacity-0 shadow;
+}
+
+.dropdown > .dropdown-button:focus + .dropdown-menu {
+    transform: scale(1);
+    pointer-events: auto;
+    z-index: 99;
+
+    @apply opacity-100;
+}
+
+dialog {
+    @apply place-self-center p-6 text-left;
+}
+
+.modal-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 500px;
+
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
 }
